--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
 
                <div class="twelve columns">
 
-                  <h3>M.S. University, India (GPA: 3.67)</h3>
-                  <p class="info">B.E in Computer Science <span>&bull;</span> <em class="date">May 2014</em></p>
+                  <h3>M.S. University, India </h3>
+                  <p class="info">B.E in Computer Science (GPA: 3.95)<span>&bull;</span> <em class="date">May 2014</em></p>
 
                   <p>
                   Courses: Design and Analysis of Algorithms, Database Management Systems, Operating Systems, Object Oriented Programming, Client Server Architecture
