--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ Worked with the Research & Development team for the first Oracle Fusion-ERP Clou
 
                <div class="twelve columns">
 
-                  <h3>UX Designer</h3>
+                  <h3>Web Developer & Graphics Designer</h3>
                   <p class="info">FootPrints <span>&bull;</span> <em class="date">Sept 2012 - Mar 2013</em></p>
 <p>
 				  Designed and maintained the website for FootPrints, a national level technical event organized at MS University annually.
