--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
          <div class="banner-text">
             <h1 class="responsive-headline">Dhairya's Spot</h1>
             <h3><span>I am a Computer Science graduate student from University at Buffalo. Welcome to my online portfolio.
-			You can see my skills & technology skack floating around this page. Start scrolling to go on a detailed tour of my projects, work experience and acedemic acheivements.</span></h3>
+			You can see my skills & technology stack floating around this page. Start scrolling to go on a detailed tour of my projects, work experience and acedemic acheivements.</span></h3>
             <hr />
             <ul class="social">
                
