--- a/index.html
+++ b/index.html
@@ -183,10 +183,10 @@
 
                   <h3>Oracle Application Developer</h3>
                   <p class="info">Evolutionary Systems Pvt. Ltd <span>&bull;</span> <em class="date">Jun 2014 - July 2017</em></p>
-				  <p> Developed application/dashboard for supply chain team using OA Framework (Java) and PL/SQL packages. <span>&bull;</span> <em class="date">
-Built custom forms for oracle apps facilitating complex user requirements. <span>&bull;</span> <em class="date">
-Created APIs for data integration with external platforms like Cerner systems by using DB links and ETL Mappings. <span>&bull;</span> <em class="date">
-Performed crucial data integration and data migration activities using SQL*Loader, Oracle Interfaces and Oracle APIs. <span>&bull;</span> <em class="date">
+				  <p> Developed application/dashboard using OA Framework (Java) and PL/SQL packages to maintain inventory items.<span>&bull;</span> <em class="date">
+Designed and maintained custom modules for Supply Chain and Finance processes for Oracle ERP. <span>&bull;</span> <em class="date">
+Built SQL scripts and queries to generate dynamic reports as per complex user requirements.<span>&bull;</span> <em class="date">
+Developed scripts and APIs to automate data integration for millions of records.<span>&bull;</span> <em class="date">
 Worked with the Research & Development team for the first Oracle Fusion-ERP Cloud implementation of the company.
                   </p>
 				  <p>
